j--/tests/pass/BitwiseAnd.java
package pass;

public class BitwiseAnd {
	
	public int bitAnd(int x, int y) {
		return x & y;
	}

}
