j--/tests/fail/BitwiseAnd.java
package fail;

public class BitwiseAnd {
      public static void main(String[] args) {
    	  System.out.println("nate" & "kayla");
      }
}
